# rag-against-the-machine

./: .gitignore  pyproject.toml
agents/: cli_chat.py
data/: loading.py
rag/: build_index.py  query.py
src/: config.py  llm_backend.py  pipeline.py
