[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Offline RAG + multi-agent pipeline."              
version = "0.1.0"                  
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
    "python-dotenv>=1,<2",
    "faiss-cpu>=1.7,<2",
    "sentence-transformers>=2.2,<3",
    "langchain-core>=0.2,<0.3",
    "langchain-community>=0.2,<0.3",
    "langchain-huggingface>=0.0.1,<0.3",
    "langchain-text-splitters>=0.0.1,<2",
    "llama-cpp-python>=0.2,<0.3",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
# Treat as packages ( __init__.py)
packages = ["src", "data", "rag", "agents", "ui"]